package sample;

public class Constants {
    public final static int WIDTH = 800;
    public final static int HEIGHT = 480;

    public final static int ORDERKEYLENGHT = 32;
    public final static int EVENTKEYLENGTH = 32;
    public final static int MACHINETOKENLENGTH = 55;

    public final static String BUTTONSTYLE =
            "-fx-background-color: white;\n" +
            "-fx-background-radius: 30;\n" +
            "-fx-background-insets: 0;\n" +
                    "-fx-font-size: 15;\n" +
            "-fx-text-fill: #7e7e7e;\n" +
                    "-fx-font-family: 'Courier New';\n"+
                    "-fx-border-color: #7e7e7e;\n"+
                    "-fx-border-radius: 30;";

    public final static String PRESSEDBUTTONSTYLE =
            "-fx-background-color: #b0b0b0;\n" +
            "-fx-background-radius: 30;\n" +
            "-fx-background-insets: 0;\n" +
            "-fx-font-size: 15;\n" +
                    "-fx-font-family: 'Courier New';\n"+
            "-fx-text-fill: #7e7e7e;;\n"+
                    "-fx-border-color: #7e7e7e;;\n"+
                    "-fx-border-radius: 30;";

    public final static  String TEXTFEILDSTYLE =
            "-fx-background-color: -fx-text-box-border, -fx-background;\n"+
                    "-fx-background-insets: 0, 0 0 1 0;\n"+
                    "-fx-background-radius: 0;\n";

    public final static  String TEXTFEILDFOCUSEDSTYLE = "-fx-background-color: -fx-focus-color, -fx-background;";

    public final static  String PROGRESSSTYLE = "-fx-progress-color: black;";

    public final static  String LABELSTYLE =
            "-fx-font-size: 40;\n" +
                    "-fx-text-fill: #7e7e7e;\n"+
                    "-fx-font-family: 'Savoye LET';\n";

}
